Clear wrap action. Fix wrap action message box text overflow.

--- a/src/components/WrapJingles/WrapJinglesContent/WrapJinglesContentJingleItem/WrapJinglesContentJingleItem.scss
+++ b/src/components/WrapJingles/WrapJinglesContent/WrapJinglesContentJingleItem/WrapJinglesContentJingleItem.scss
@@ -1,4 +1,7 @@
 .wrap-jingles-content-jingle-item-wrapper {
+
+  .message-box-wrapper.error .message-box .text-wrapper { word-break: break-all; }
+
   .button {
     margin-top: 15px;
   }
